--- a/monitor/web/parts/footer.ejs
+++ b/monitor/web/parts/footer.ejs
@@ -8,15 +8,17 @@
                 <footer class="c-footer text-center">
                     <div class="mx-auto d-md-none"> <strong>v<%= txAdminVersion %></strong> atop FXServer <strong><%= fxServerVersion %></strong></div>
                     <div class="d-sm-down-none"> 
-                        <!-- &copy; 2019-<%= (new Date).getUTCFullYear() %> -->
-                        <a href="https://github.com/Marshxan/qb-txadmin" class="credit-links" target="_blank">qb-theme</a> 
+                        &copy; 2019-<%= (new Date).getUTCFullYear() %>
+                        <a href="https://github.com/tabarra" class="credit-links" target="_blank">Credits To Tabarra &</a>
+                        <a href="https://github.com/Marshxan" class="credit-links" target="_blank">Marshy &</a>
+                        <a href="https://github.com/IDKFORCE" class="credit-links" target="_blank">IDKFORCE</a>
                     </div>
-                    <!-- <div class="ml-auto d-sm-down-none"> 
+                    <div class="ml-auto d-sm-down-none"> 
                         <% if (txaOutdated || fxsOutdated) { %>
                             <strong class="text-danger">(outdated)</strong>
                         <% } %>
-                        <strong>v<%= txAdminVersion %></strong> atop FXServer <strong><%= fxServerVersion %></strong>
-                    </div> -->
+                        <strong>v<%= txAdminVersion %></strong> Latest FXServer <strong><%= fxServerVersion %></strong>
+                    </div>
                 </footer>
             <% } %>
         </div>
