--- a/monitor/web/standalone/deployer.ejs
+++ b/monitor/web/standalone/deployer.ejs
@@ -26,7 +26,7 @@
             color: #321fdb!important;
         }
         body.theme--dark .inline-code {
-            color: #00bf8f !important;
+            color: #dc143c !important;
         }
         .cm-s-lucario{
             font-size: 1.05rem !important;
