--- a/monitor/web/public/css/dark.scss
+++ b/monitor/web/public/css/dark.scss
@@ -12,7 +12,7 @@ $txadmin-text-color: #FFFFFF;
 $txadmin-text-color-inverse: #111111;
 $txadmin-border-color: $txadmin-dark-700;
 
-$txadmin-primary: #00bf8f;
+$txadmin-primary: #dc143c;
 $txadmin-secondary: #3ab8cd;
 $txadmin-danger: #ff148f;
 
@@ -246,7 +246,7 @@ body.theme--dark {
       font-weight: 600;
       
       &.nav-link-red{
-        background-color: #e55353 !important;
+        background-color: #dc143c !important;
       }
     }
   }
