--- a/monitor/web/parts/header.ejs
+++ b/monitor/web/parts/header.ejs
@@ -151,7 +151,7 @@
             <!-- Sidebar footer -->
             <% if (isWebInterface) { %>
                 <li class="c-sidebar-nav-divider"></li>
-                <li class="c-sidebar-nav-title mt-auto">QB System Usage</li>
+                <li class="c-sidebar-nav-title mt-auto">QBCORE System Usage</li>
                 <li class="c-sidebar-nav-item px-3 d-compact-none c-d-minimized-none">
                     <div class="text-uppercase mb-1">
                         <small>
