changed default avatar

--- a/monitor/web/parts/header.ejs
+++ b/monitor/web/parts/header.ejs
@@ -269,7 +269,7 @@
                             aria-expanded="false">
                             <span class="d-md-down-none pr-2"><%= adminUsername %> </span>
                             <div class="c-avatar">
-                                <img class="c-avatar-img profile-pic" src="<%= profilePicture %>" alt="<%= adminUsername %>">
+                                <img class="c-avatar-img profile-pic" src="img/tx2.gif" alt="<%= adminUsername %>">
                             </div>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right pt-0">
